@@ -8,4 +8,7 @@
       'X-Request-Base' => 'http://localhost:1234/yikes',
     },
   ],
+  plugins => [
+    't::lib::Plugin' => ['yikes'],
+  ],
 }
